--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #f0fdfa; /* Un fondo verde menta muy claro */
+            background-color: #5ead9b; /* Un fondo verde menta muy claro */
         }
         .step-card {
             transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
