Actualizar index.html
palystore

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <p class="font-bold text-lg mb-2">Paso 1: Instalar la App</p>
                         <p>Busca e instala la app oficial <span class="font-semibold">"Moodle"</span> desde la tienda de tu celular.</p>
                         <div class="flex justify-center gap-4 mt-3">
-                            <a href="https://play.google.com/store/apps/details?id=com.moodle.moodle" target="_blank" class="bg-black text-white py-2 px-4 rounded-lg hover:bg-gray-800 transition">Google Play</a>
+                            <a href="https://play.google.com/store/apps/details?id=com.moodle.moodlemobile" target="_blank" class="bg-black text-white py-2 px-4 rounded-lg hover:bg-gray-800 transition">Google Play</a>
                             <a href="https://apps.apple.com/es/app/moodle/id633359593" target="_blank" class="bg-black text-white py-2 px-4 rounded-lg hover:bg-gray-800 transition">App Store</a>
                         </div>
                          <img src="imagenes/app-paso1-tienda.png" alt="[Icono de la aplicación Moodle]" class="mt-3 rounded-lg w-full" onerror="this.onerror=null; this.src='https://placehold.co/600x300/cccccc/333333?text=Error+cargando+imagen';">
